--- a/課題提出用/プロダクト演習課題/cGAN.ipynb
+++ b/課題提出用/プロダクト演習課題/cGAN.ipynb
@@ -354,6 +354,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(64, 100)\n",
+      "(64, 10)\n",
+      "(64, 110)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ラベルとして用いるデータを決定\n",
+    "batch_iterate = np.random.randint(0, x_train.shape[0], size=half_batch_size)\n",
+    "#ランダムに潜在変数を生成\n",
+    "random_latent_vectors = np.random.normal(size=(half_batch_size, latent_dim))\n",
+    "\n",
+    "print(random_latent_vectors.shape)\n",
+    "print(y_train_categorical[batch_iterate].shape)\n",
+    "\n",
+    "#generatorに入力するためのデータ作成\n",
+    "gen_input = np.concatenate([random_latent_vectors, y_train_categorical[batch_iterate]], axis=1)\n",
+    "\n",
+    "print(gen_input.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -409,11 +439,21 @@
     "        random_latent_vectors = np.random.normal(size=(half_batch_size, latent_dim))\n",
     "        \n",
     "        #generatorに入力するためのデータ作成\n",
-    "        gen_input = np.concatenate([random_latent_vectors, y_train_categorical[batch_iterate]], axis=3)\n",
+    "        gen_input = np.concatenate([random_latent_vectors, y_train_categorical[batch_iterate]], axis=1)\n",
     "        \n",
     "        #潜在変数を元にgeneratorで画像を生成\n",
     "        generated_img = build_model_generator.predict(gen_input)\n",
-    "\n",
+    "        \n",
+    "        #discriminatorのinput用に画像とラベルを結合したものを作成\n",
+    "        dis_input = np.concatenate([generated_img, discriminator_label[batch_iterate]], axis=3)\n",
+    "        \n",
+    "        \n",
+    "        #本物として用いるデータを決定\n",
+    "        real_iterate = np.random.randint(0, x_train.shape[0], size=half_batch_size)\n",
+    "        \n",
+    "        #本物の画像\n",
+    "        real_img = x_train[real_iterate]        \n",
+    "        \n",
     "        \n",
     "        #---discriminatorの学習-----------------------------------------------------\n",
     "              \n",
